--- a/src/onegov/election_day/locale/de_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/de_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-06 09:12+0100\n"
+"POT-Creation-Date: 2024-03-08 09:16+0100\n"
 "PO-Revision-Date: 2022-03-24 15:35+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -115,6 +115,15 @@ msgstr "Ebene nicht unterstützt"
 
 msgid "Changing types is not supported"
 msgstr "Der Wechsel von Typen wird nicht unterstützt"
+
+msgid "Election does not exist"
+msgstr "Wahl exisitert nicht""
+
+msgid "Candidate does not exist"
+msgstr "Kandidierender exisitert nicht"
+
+msgid "List does not exist"
+msgstr "Liste exisitert nicht"
 
 msgid "Invalid election values"
 msgstr "Ungültige Wahldaten"
