Org: Fix message so iOS can autofill [skip ci]
TYPE: Bugfix
LINK: OGC-1415

--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -19,7 +19,7 @@ msgid ""
 "${mtan} - mTAN for ${organisation}.\n"
 "Or continue here: ${url}"
 msgstr ""
-"${mtan} – mTAN pour ${organisation}.\n"
+"${mtan}: mTAN pour ${organisation}.\n"
 "Ou continuer ici : ${url}"
 
 msgid ""
