--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2024-02-12 09:50+0100\n"
+"POT-Creation-Date: 2024-03-06 08:20+0100\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1502,6 +1502,10 @@ msgstr "Fissare gli elementi dell'intestazione"
 msgid "Please add an url to each link"
 msgstr "Aggiungere un url a ciascun link"
 
+msgid "Your URLs must start with http://, https:// or / (for internal links)"
+msgstr ""
+"Gli URL devono iniziare con http://, https:// o / (per i link interni)."
+
 msgid "Homepage Cover"
 msgstr "Copertina della pagina principale"
 
@@ -2406,6 +2410,9 @@ msgstr "En tant qu'image d'en-tête pleine largeur"
 msgid "Documents"
 msgstr "Documenti"
 
+msgid "Sidebar links"
+msgstr "Collegamenti della barra laterale"
+
 msgid "This month"
 msgstr "Questo mese"
 
@@ -3109,6 +3116,9 @@ msgid ""
 msgstr ""
 "Questo sito non contiene estratti. Per gli elenchi e i risultati di ricerca "
 "vengono utilizzati gli estratti."
+
+msgid "Links"
+msgstr "Collegamenti"
 
 msgid "Change request"
 msgstr "Richiesta di modifica"
@@ -5298,9 +5308,6 @@ msgstr "Ricerca non disponibile"
 
 msgid "Favicon"
 msgstr "Favicon"
-
-msgid "Links"
-msgstr "Collegamenti"
 
 msgid "Header"
 msgstr "Intestazione"
