--- a/src/onegov/pas/locale/de_CH/LC_MESSAGES/onegov.pas.po
+++ b/src/onegov/pas/locale/de_CH/LC_MESSAGES/onegov.pas.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2024-03-11 14:09+0100\n"
+"POT-Creation-Date: 2024-03-12 11:56+0100\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Language-Team: German\n"
 "Language: de_CH\n"
@@ -11,19 +11,22 @@ msgstr ""
 "Generated-By: Lingua 3.12\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgid "User"
+msgstr "Benutzer"
+
 msgid "Logout"
 msgstr "Abmelden"
 
 msgid "Management"
 msgstr "Verwaltung"
 
-msgid "Parlamentarians"
+msgid "Parliamentarians"
 msgstr "Parlamentarier:innen"
 
-msgid "Legislative Periods"
+msgid "Legislative periods"
 msgstr "Legislaturen"
 
-msgid "Parliamentary Groups"
+msgid "Parliamentary groups"
 msgstr "Fraktionen"
 
 msgid "Parties"
@@ -34,6 +37,78 @@ msgstr "Benutzer"
 
 msgid "Settings"
 msgstr "Einstellungen"
+
+msgid "Name"
+msgstr "Name"
+
+msgid "Start"
+msgstr "Start"
+
+msgid "End"
+msgstr "Ende"
+
+msgid "First name"
+msgstr "Vorname"
+
+msgid "Last name"
+msgstr "Nachname"
+
+msgid "Description"
+msgstr "Beschreibung"
+
+msgid "Homepage"
+msgstr "Startseite"
+
+msgid "Add"
+msgstr "Hinzufügen"
+
+msgid "Legislative period"
+msgstr "Legislatur"
+
+msgid "Edit"
+msgstr "Bearbeiten"
+
+msgid "Delete"
+msgstr "Löschen"
+
+msgid "Do you really want to delete this legislative period?"
+msgstr "Möchten Sie die Legislatur wirklich löschen?"
+
+msgid "This cannot be undone."
+msgstr "Dies kann nicht rückgängig gemacht werden."
+
+msgid "Delete legislative period"
+msgstr "Legislatur löschen"
+
+msgid "Cancel"
+msgstr "Abbrechen"
+
+msgid "Parliamentarian"
+msgstr "Parlamentarier:in"
+
+msgid "Do you really want to delete this parliamentarian?"
+msgstr "Möchten Sie diese:n Parlamentarier:in wirklich löschen?"
+
+msgid "Delete parliamentarian"
+msgstr "Parlamentarier:in löschen"
+
+msgid "Parliamentary group"
+msgstr "Fraktion"
+
+msgid "Do you really want to delete this parliamentary group?"
+msgstr "Möchten Sie diese Fraktion wirklich löschen?"
+
+msgid "Delete parliamentary group"
+msgstr "Fraktion löschen"
+
+msgid "Party"
+msgstr "Partei"
+
+msgid "Do you really want to delete this party?"
+msgstr "Möchten Sie diese Partei wirklich löschen?"
+
+msgid "Delete party"
+msgstr "Partei löschen"
 
 msgid "Search term"
 msgstr "Suchbegriff"
@@ -53,3 +128,45 @@ msgstr ""
 
 msgid "Copied to Clipboard!"
 msgstr "In die Zwischenablage kopiert!"
+
+msgid "No legislative periods defined yet."
+msgstr "Noch keine Legislaturen erfasst."
+
+msgid "No parliamentarians defined yet."
+msgstr "Noch keine Parlamentarier:innen erfasst."
+
+msgid "No parliamentary groups defined yet."
+msgstr "Noch keine Fraktionen erfasst."
+
+msgid "No parties defined yet."
+msgstr "Noch keine Parteien erfasst."
+
+msgid "Added a new legislative period"
+msgstr "Legislatur hinzugefügt"
+
+msgid "New"
+msgstr "Neu"
+
+msgid "New legislative period"
+msgstr "Neue Legislatur"
+
+msgid "Your changes were saved"
+msgstr "Änderungen gespeichert"
+
+msgid "Added a new parliamentarian"
+msgstr "Parlamentarier:in hinzugefügt"
+
+msgid "New parliamentarian"
+msgstr "Neue:r Parlamentarier:in"
+
+msgid "Added a new parliamentary group"
+msgstr "Fraktion hinzugefügt"
+
+msgid "New parliamentary group"
+msgstr "Neue Fraktion"
+
+msgid "Added a new party"
+msgstr "Partei hinzugefügt"
+
+msgid "New party"
+msgstr "Neue Partei"
