--- a/src/onegov/pas/locale/de_CH/LC_MESSAGES/onegov.pas.po
+++ b/src/onegov/pas/locale/de_CH/LC_MESSAGES/onegov.pas.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2024-03-12 11:56+0100\n"
+"POT-Creation-Date: 2024-03-12 16:39+0100\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Language-Team: German\n"
 "Language: de_CH\n"
@@ -47,11 +47,89 @@ msgstr "Start"
 msgid "End"
 msgstr "Ende"
 
+msgid "Personnel number"
+msgstr "Personalnummer"
+
+msgid "Basic properties"
+msgstr "Grundeigenschaften"
+
+msgid "Contract number"
+msgstr "Vertragsnummer"
+
 msgid "First name"
 msgstr "Vorname"
 
 msgid "Last name"
 msgstr "Nachname"
+
+msgid "Address"
+msgstr "Adresse"
+
+msgid "Shipping address"
+msgstr "Versandadresse"
+
+msgid "Addition"
+msgstr "Adresszusatz"
+
+msgid "Zip code"
+msgstr "PLZ"
+
+msgid "City"
+msgstr "Stadt"
+
+msgid "Private address"
+msgstr "Privatadresse"
+
+msgid "Date of birth"
+msgstr "Geburtsdatum"
+
+msgid "Additional information"
+msgstr "Zusatzinformationen"
+
+msgid "Date of death"
+msgstr "Sterbedatum"
+
+msgid "Place of origin"
+msgstr "Bürgerort"
+
+msgid "Occupation"
+msgstr "Beruf"
+
+msgid "Academic title"
+msgstr "Akademischer Titel"
+
+msgid "Salutation"
+msgstr "Anrede"
+
+msgid "Salutation used in the address"
+msgstr "Adress-Anrede"
+
+msgid "Salutation used for letters"
+msgstr "Brief-Anrede"
+
+msgid "How bills should be delivered"
+msgstr "Spedition Vorlagen"
+
+msgid "Private phone number"
+msgstr "Telefon Privat"
+
+msgid "Mobile phone number"
+msgstr "Telefon Mobile"
+
+msgid "Business phone number"
+msgstr "Telefon Geschäft"
+
+msgid "Primary email address"
+msgstr "1. E-Mail"
+
+msgid "Secondary email address"
+msgstr "2. E-Mail"
+
+msgid "Website"
+msgstr "Webseite"
+
+msgid "Remarks"
+msgstr "Bemerkungen"
 
 msgid "Description"
 msgstr "Beschreibung"
@@ -110,11 +188,32 @@ msgstr "Möchten Sie diese Partei wirklich löschen?"
 msgid "Delete party"
 msgstr "Partei löschen"
 
-msgid "Search term"
-msgstr "Suchbegriff"
+msgid "male"
+msgstr "männlich"
+
+msgid "female"
+msgstr "weiblich"
+
+msgid "A Mail"
+msgstr "A-Post"
+
+msgid "A Mail Plus"
+msgstr "A-Post Plus"
+
+msgid "Registered"
+msgstr "eingeschrieben"
+
+msgid "Confidential"
+msgstr "vertraulich"
+
+msgid "Personal / Confidential"
+msgstr "persönlich / vertraulich"
 
 msgid "Skip navigation"
 msgstr "Navigation überspringen"
+
+msgid "Search term"
+msgstr "Suchbegriff"
 
 msgid "Back to the homepage"
 msgstr "Zurück zur Startseite"
