--- a/src/onegov/pas/locale/de_CH/LC_MESSAGES/onegov.pas.po
+++ b/src/onegov/pas/locale/de_CH/LC_MESSAGES/onegov.pas.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2024-03-13 13:18+0100\n"
+"POT-Creation-Date: 2024-03-13 15:43+0100\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Language-Team: German\n"
 "Language: de_CH\n"
@@ -22,6 +22,9 @@ msgstr "Verwaltung"
 
 msgid "Parliamentarians"
 msgstr "Parlamentarier:innen"
+
+msgid "Commissions"
+msgstr "Kommissionen"
 
 msgid "Legislative periods"
 msgstr "Legislaturen"
@@ -46,6 +49,12 @@ msgstr "Start"
 
 msgid "End"
 msgstr "Ende"
+
+msgid "Type"
+msgstr "Art"
+
+msgid "Description"
+msgstr "Beschreibung"
 
 msgid "Personnel number"
 msgstr "Personalnummer"
@@ -140,9 +149,6 @@ msgstr "Webseite"
 msgid "Remarks"
 msgstr "Bemerkungen"
 
-msgid "Description"
-msgstr "Beschreibung"
-
 msgid "Portrait"
 msgstr "Portrait"
 
@@ -152,8 +158,8 @@ msgstr "Startseite"
 msgid "Add"
 msgstr "Hinzufügen"
 
-msgid "Legislative period"
-msgstr "Legislatur"
+msgid "Commission"
+msgstr "Kommission"
 
 msgid "Edit"
 msgstr "Bearbeiten"
@@ -161,17 +167,26 @@ msgstr "Bearbeiten"
 msgid "Delete"
 msgstr "Löschen"
 
-msgid "Do you really want to delete this legislative period?"
-msgstr "Möchten Sie die Legislatur wirklich löschen?"
+msgid "Do you really want to delete this commission?"
+msgstr "Möchten Sie die Kommission wirklich löschen?"
 
 msgid "This cannot be undone."
 msgstr "Dies kann nicht rückgängig gemacht werden."
 
-msgid "Delete legislative period"
-msgstr "Legislatur löschen"
+msgid "Delete commission"
+msgstr "Kommission löschen"
 
 msgid "Cancel"
 msgstr "Abbrechen"
+
+msgid "Legislative period"
+msgstr "Legislatur"
+
+msgid "Do you really want to delete this legislative period?"
+msgstr "Möchten Sie die Legislatur wirklich löschen?"
+
+msgid "Delete legislative period"
+msgstr "Legislatur löschen"
 
 msgid "Parliamentarian"
 msgstr "Parlamentarier:in"
@@ -200,26 +215,38 @@ msgstr "Möchten Sie diese Partei wirklich löschen?"
 msgid "Delete party"
 msgstr "Partei löschen"
 
+msgid "normal"
+msgstr "normal"
+
+msgid "intercantonal"
+msgstr "interkantonalo
+
+msgid "official mission"
+msgstr "amtliche Mission"
+
 msgid "male"
 msgstr "männlich"
 
 msgid "female"
 msgstr "weiblich"
 
-msgid "A Mail"
+msgid "A mail"
 msgstr "A-Post"
 
-msgid "A Mail Plus"
+msgid "A mail plus"
 msgstr "A-Post Plus"
 
-msgid "Registered"
+msgid "registered"
 msgstr "eingeschrieben"
 
-msgid "Confidential"
+msgid "confidential"
 msgstr "vertraulich"
 
 msgid "Personal / Confidential"
 msgstr "persönlich / vertraulich"
+
+msgid "No commissions defined yet."
+msgstr "Noch keine Kommissionen erfasst."
 
 msgid "Skip navigation"
 msgstr "Navigation überspringen"
@@ -255,17 +282,23 @@ msgstr "Noch keine Fraktionen erfasst."
 msgid "No parties defined yet."
 msgstr "Noch keine Parteien erfasst."
 
-msgid "Added a new legislative period"
-msgstr "Legislatur hinzugefügt"
+msgid "Added a new commission"
+msgstr "Kommission hinzugefügt"
 
 msgid "New"
 msgstr "Neu"
 
-msgid "New legislative period"
-msgstr "Neue Legislatur"
+msgid "New commission"
+msgstr "Neue Kommission"
 
 msgid "Your changes were saved"
 msgstr "Änderungen gespeichert"
+
+msgid "Added a new legislative period"
+msgstr "Legislatur hinzugefügt"
+
+msgid "New legislative period"
+msgstr "Neue Legislatur"
 
 msgid "Added a new parliamentarian"
 msgstr "Parlamentarier:in hinzugefügt"
