--- a/src/onegov/pas/locale/de_CH/LC_MESSAGES/onegov.pas.po
+++ b/src/onegov/pas/locale/de_CH/LC_MESSAGES/onegov.pas.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2024-03-15 10:31+0100\n"
+"POT-Creation-Date: 2024-03-18 08:50+0100\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Language-Team: German\n"
 "Language: de_CH\n"
@@ -388,6 +388,9 @@ msgstr "Noch keine Parlamentarier:innen erfasst."
 msgid "No parliamentary groups defined yet."
 msgstr "Noch keine Fraktionen erfasst."
 
+msgid "Filters"
+msgstr "Filter"
+
 msgid "No parties defined yet."
 msgstr "Noch keine Parteien erfasst."
 
@@ -429,6 +432,12 @@ msgstr "Neue Rolle hinzugefügt"
 
 msgid "New role"
 msgstr "Neue Rolle"
+
+msgid "Active"
+msgstr "Aktiv"
+
+msgid "Inactive"
+msgstr "Inaktiv"
 
 msgid "Added a new parliamentary group"
 msgstr "Fraktion hinzugefügt"
