Agency: Add back translation that was removed.
TYPE: Bugfix
LINK: OGC-1508

--- a/src/onegov/agency/locale/de_CH/LC_MESSAGES/onegov.agency.po
+++ b/src/onegov/agency/locale/de_CH/LC_MESSAGES/onegov.agency.po
@@ -339,7 +339,7 @@ msgid "Report change"
 msgstr "Mutation melden"
 
 msgid "Report a change"
-msgstr ""
+msgstr "Eine Mutation melden"
 
 msgid ""
 "Sort the items using drag and drop. The new positions are automatically "
