--- a/src/onegov/pas/locale/de_CH/LC_MESSAGES/onegov.pas.po
+++ b/src/onegov/pas/locale/de_CH/LC_MESSAGES/onegov.pas.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2024-03-18 11:05+0100\n"
+"POT-Creation-Date: 2024-03-19 14:03+0100\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Language-Team: German\n"
 "Language: de_CH\n"
@@ -20,8 +20,8 @@ msgstr "Abmelden"
 msgid "Management"
 msgstr "Verwaltung"
 
-msgid "Meetings"
-msgstr "Sitzungen"
+msgid "Attendences"
+msgstr "Anwesenheiten"
 
 msgid "Parliamentarians"
 msgstr "Parlamentarier:innen"
@@ -197,8 +197,8 @@ msgstr "Startseite"
 msgid "Add"
 msgstr "Hinzufügen"
 
-msgid "Meeting"
-msgstr "Sitzung"
+msgid "Attendence"
+msgstr "Anwesenheit"
 
 msgid "Plenary session"
 msgstr "Plenarsitzung"
@@ -391,14 +391,14 @@ msgstr "Noch keine Fraktionen erfasst."
 msgid "No parties defined yet."
 msgstr "Noch keine Parteien erfasst."
 
-msgid "Added a new meeting"
-msgstr "Neue Sitzung hinzugefügt"
+msgid "Added a new attendence"
+msgstr "Neue Anwesenheit hinzugefügt"
 
 msgid "New"
 msgstr "Neu"
 
-msgid "New meeting"
-msgstr "Neue Sitzung"
+msgid "New attendence"
+msgstr "Neue Anwesenheit"
 
 msgid "Added plenary session"
 msgstr "Plenarsitzung hinzugefügt"
