Adjust snippet and translations

--- a/src/onegov/form/locale/de_ch/LC_MESSAGES/onegov.form.po
+++ b/src/onegov/form/locale/de_ch/LC_MESSAGES/onegov.form.po
@@ -80,6 +80,9 @@ msgstr "Auswahl"
 msgid "Multiple Choice"
 msgstr "Mehrfachauswahl"
 
+msgid "Subfields depending on selected option"
+msgstr "Unterfelder je nach gewählter Option"
+
 msgid "Files"
 msgstr "Dateien"
 
