Improve snippet text

--- a/src/onegov/form/locale/de_ch/LC_MESSAGES/onegov.form.po
+++ b/src/onegov/form/locale/de_ch/LC_MESSAGES/onegov.form.po
@@ -80,8 +80,8 @@ msgstr "Auswahl"
 msgid "Multiple Choice"
 msgstr "Mehrfachauswahl"
 
-msgid "Subfields depending on selected option"
-msgstr "Unterfelder je nach gewählter Option"
+msgid "Subfields depending on choice"
+msgstr "Unterfelder je nach Wahl"
 
 msgid "Files"
 msgstr "Dateien"
