--- a/src/onegov/form/locale/fr_CH/LC_MESSAGES/onegov.form.po
+++ b/src/onegov/form/locale/fr_CH/LC_MESSAGES/onegov.form.po
@@ -79,8 +79,8 @@ msgstr "Choix"
 msgid "Multiple Choice"
 msgstr "Choix multiples"
 
-msgid "Subfields depending on selected option"
-msgstr "Sous-champs selon l'option sélectionnée"
+msgid "Subfields depending on choice"
+msgstr "Sous-champs selon le choix"
 
 msgid "Files"
 msgstr "Fichiers"
