--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -1240,6 +1240,12 @@ msgstr ""
 msgid "Latest news"
 msgstr "Aktuelles"
 
+msgid "Show news as tiles"
+msgstr "Aktuelles als Kacheln anzeigen"
+
+msgid "If checked, the news will be shown as tiles"
+msgstr "Wenn diese Option aktiviert ist, werden die Nachrichten als Kacheln angezeigt."
+
 msgid ""
 "You are receiving this e-mail because you signed up for the ${org} "
 "newsletter."
