--- a/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
@@ -1226,6 +1226,12 @@ msgstr ""
 msgid "Latest news"
 msgstr "Ultime notizie"
 
+msgid "Show news as tiles"
+msgstr "Mostra le notizie come piastrelle"
+
+msgid "If checked, the news will be shown as tiles"
+msgstr "Se è selezionata, le notizie saranno mostrate come piastrelle"
+
 msgid ""
 "You are receiving this e-mail because you signed up for the ${org} "
 "newsletter."
