--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -1239,6 +1239,12 @@ msgstr ""
 msgid "Latest news"
 msgstr "Dernières nouvelles"
 
+msgid "Show news as tiles"
+msgstr "Afficher les actualités sous forme de tuiles"
+
+msgid "If checked, the news will be shown as tiles"
+msgstr "Si cette case est cochée, les nouvelles seront affichées sous forme de tuiles."
+
 msgid ""
 "You are receiving this e-mail because you signed up for the ${org} "
 "newsletter."
