Forms: Adds user snippet for subfields to formcode
Feature
LINK: ogc-977

--- a/src/onegov/form/locale/fr_CH/LC_MESSAGES/onegov.form.po
+++ b/src/onegov/form/locale/fr_CH/LC_MESSAGES/onegov.form.po
@@ -79,6 +79,9 @@ msgstr "Choix"
 msgid "Multiple Choice"
 msgstr "Choix multiples"
 
+msgid "Subfields depending on choice"
+msgstr "Sous-champs selon le choix"
+
 msgid "Files"
 msgstr "Fichiers"
 
