--- a/src/onegov/form/locale/it_CH/LC_MESSAGES/onegov.form.po
+++ b/src/onegov/form/locale/it_CH/LC_MESSAGES/onegov.form.po
@@ -77,6 +77,9 @@ msgstr "Scelta"
 msgid "Multiple Choice"
 msgstr "Scelta multipla"
 
+msgid "Subfields depending on choice"
+msgstr "Sottocampi a seconda della scelta"
+
 msgid "Files"
 msgstr "File"
 
